--- a/deploy.yml
+++ b/deploy.yml
@@ -3,17 +3,23 @@ kind: Deployment
 metadata:
   name: myweb-deploy
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      env: testing
+      env: production
   template:
     metadata:
       name: myweb-pod
       labels:
-        env: testing
-        app: html-pod
+        env: production
     spec:
       containers:
       - name: html-pod
         image: vimal13/apache-webserver-php
+        volumeMounts:
+        -  name: web-vol1
+           mountPath: /var/www/html
+      volumes:
+        -  name: web-vol1
+           persistentVolumeClaim:
+             claimName: mypvc
